# minilang

./: CMakeLists.txt  README.md
documentation/: report.docx  ~$report.docx
lib/: Token.cpp  Token.h  main.cpp  repl.cpp
lib/Execution/: Interpreter.cpp  Interpreter.h  Reference.cpp  Reference.h
lib/Lexer/: ClassifierTable.cpp  ClassifierTable.h  KeywordTable.h  Lexer.cpp  Lexer.h  TokenTypeTable.cpp  TokenTypeTable.h  TransitionTable.cpp  TransitionTable.h
lib/Parser/: ASTNodes.cpp  ASTNodes.h  Parser.cpp  Parser.h
lib/REPL/: REPL.cpp  REPL.h
lib/SemanticAnalyzer/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  SematicAnalyzer.h  SymbolTable.cpp  SymbolTable.h
